--- a/NetRocks/configs/plug/rus.lng
+++ b/NetRocks/configs/plug/rus.lng
@@ -47,7 +47,7 @@
 "Настройки протокола"
 "&Сохранить"
 "Под&ключить"
-"Сохр&./подключить"
+"Сохр./под&ключить"
 
 "<Создать новое подключение>"
 "Настройки подключения"
@@ -220,7 +220,11 @@
 "Включить опцию TCP_&QUICKACK"
 "Попыток подключиться, &раз:"
 "Таймаут подключения, &секунд:"
-"Использовать файлы конфигурации OpenSS&H"
+"Разрешенные &ключи:"
+"OpenSS&H конфиги:"
+"(Обычные файлы конфигурации)"
+"(Не использовать конфиги)"
+"(Указать пути к конфигам)"
 "Включить защиту (если вы не доверяете серверу)"
 
 "Настройки протокола FILE"
