Update plugins from far2l

--- a/NetRocks/configs/plug/bel.lng
+++ b/NetRocks/configs/plug/bel.lng
@@ -218,6 +218,7 @@
 "Памер блока запісу, байт:"
 "Уключыць наладу TCP_&NODELAY"
 "Уключыць наладу TCP_&QUICKACK"
+"Ігнараваць &памылкі часу і рэжымаў"
 "Спроб падлучэння, &разоў:"
 "Таймаўт падлучэння, &секунд:"
 "Дазволеныя &ключы:"
