--- a/NetRocks/configs/plug/rus.lng
+++ b/NetRocks/configs/plug/rus.lng
@@ -218,6 +218,7 @@
 "Размер блока записи, байт:"
 "Включить опцию &TCP_NODELAY"
 "Включить опцию TCP_&QUICKACK"
+"Игнорировать &ошибки времени и режимов"
 "Попыток подключиться, &раз:"
 "Таймаут подключения, &секунд:"
 "Разрешенные &ключи:"
