LuaMacro: change a shortcut in  menu

--- a/luamacro/src/lm_bel.lng
+++ b/luamacro/src/lm_bel.lng
@@ -5,7 +5,7 @@
 "Reloading macros"
 
 "Выканаць макрас"
-"Лічба: выканаць | Alt+F4: адчыніць для змены"
+"Лічба: выканаць | F4: адчыніць для змены"
 "< Няма апісання: індэкс=%d >"
 "Нізкая перавага"
 
