--- a/luamacro/src/lm_eng.lng
+++ b/luamacro/src/lm_eng.lng
@@ -5,7 +5,7 @@
 "Reloading macros"
 
 "Execute a macro"
-"Digit: execute | Alt+F4: open in editor"
+"Digit: execute | F4: open in editor"
 "< No description: Index=%d >"
 "Low priority"
 
