--- a/luamacro/src/lm_pol.lng
+++ b/luamacro/src/lm_pol.lng
@@ -5,7 +5,7 @@
 "Odświeżam makra"
 
 "Wykonaj makro"
-"Cyfra: wykonaj | Alt+F4: otwórz w edytorze"
+"Cyfra: wykonaj | F4: otwórz w edytorze"
 "< Brak opisu: Indeks=%d >"
 "Niski priorytet"
 
