--- a/luamacro/src/lm_rus.lng
+++ b/luamacro/src/lm_rus.lng
@@ -5,7 +5,7 @@
 "Перезагрузка макросов"
 
 "Исполнить макрос"
-"Цифра: исполнить | Alt+F4: открыть в редакторе"
+"Цифра: исполнить | F4: открыть в редакторе"
 "< Нет описания: индекс=%d >"
 "Низкий приоритет"
 
