--- a/luamacro/src/lm_sky.lng
+++ b/luamacro/src/lm_sky.lng
@@ -5,7 +5,7 @@
 "Reloading macros"
 
 "Spustiť makro"
-"Číslica: spustiť | Alt+F4: otvoriť v editore"
+"Číslica: spustiť | F4: otvoriť v editore"
 "< No description: Index=%d >"
 "Low priority"
 
