--- a/luamacro/src/lm_spa.lng
+++ b/luamacro/src/lm_spa.lng
@@ -5,7 +5,7 @@
 "Reloading macros"
 
 "Ejecutar un macro"
-"Dígito: ejecutar | Alt+F4: abrir en editor"
+"Dígito: ejecutar | F4: abrir en editor"
 "< No description: Index=%d >"
 "Low priority"
 
