Update WinPort and Ner

--- a/NetRocks/configs/plug/bel.lng
+++ b/NetRocks/configs/plug/bel.lng
@@ -41,9 +41,11 @@
 "Імя &карыстальніка   :"
 "&Пароль уваходу      :"
 "П&рацоўная дырэкторыя:"
-"Трымаць &жывым, сек  :"
+"Трымаць &жывым, сек. :"
 "Кадыр&оўка           :"
+"Папраўка &часу, сек. :"
 "&Імя падлучэння      :"
+"&Дад. налады"
 "Налады пратаколу"
 "&Захаваць"
 "Падклю&чыць"
@@ -230,6 +232,7 @@
 
 "Налады пратаколу FILE"
 "Каманда, якая выконваецца пры падлучэнні:"
+"Каманда, якая выконваецца пры адключэнні:"
 "Дадатковы радок, які перадаецца камандзе:"
 "Абмежаванне часу выканання каманды, секунд:"
 "Дадатковыя зменныя асяроддзя, якія даступныя працэсу каманды:"
