--- a/NetRocks/configs/plug/eng.lng
+++ b/NetRocks/configs/plug/eng.lng
@@ -41,9 +41,11 @@
 "Login &username     :"
 "Login &password     :"
 "&Working directory  :"
-"&Keepalive, seconds :"
-"Cod&epage           :"
+"&Keepalive, seconds  :"
+"Cod&epage            :"
+"&Time adjust, seconds:"
 "&Display name       :"
+"E&xtra options"
 "Pro&tocol options"
 "&Save"
 "C&onnect"
@@ -229,8 +231,9 @@
 "Enable &sandbox (if you don't trust server)"
 
 "File Protocol options"
-"Command to execute on connect:"
-"Extra string passed to command:"
+"Command to e&xecute on connect:"
+"Command to execute on &disconnect:"
+"Extra &string passed to command:"
 "Limit command execution time, seconds:"
 "Extra environment variables available for command process:"
 
