--- a/NetRocks/configs/plug/rus.lng
+++ b/NetRocks/configs/plug/rus.lng
@@ -41,9 +41,11 @@
 "Имя &пользователя    :"
 "П&ароль входа        :"
 "&Рабочая директория  :"
-"Держать &живым, сек  :"
-"К&одировка           :"
+"Держать &живым, сек   :"
+"К&одировка            :"
+"Поправка &времени, сек:"
 "&Имя подключения     :"
+"&Доп. настройки"
 "Настройки протокола"
 "&Сохранить"
 "Под&ключить"
@@ -230,6 +232,7 @@
 
 "Настройки протокола FILE"
 "Команда, исполняемая при подключении:"
+"Команда, исполняемая при отключении:"
 "Дополнительная строка, передаваемая команде:"
 "Ограничение времени исполнения команды, секунд:"
 "Доп. переменные среды, доступные процессу команды:"
