Update NetRocks plugin from far2l

--- a/NetRocks/configs/plug/bel.lng
+++ b/NetRocks/configs/plug/bel.lng
@@ -284,3 +284,7 @@
 "Дазволіць &дадзеныя толькі з таго ж самага сервера"
 "Уключыць наладу TCP_&NODELAY"
 "Уключыць наладу TCP_&QUICKACK"
+
+"Налады пратаколу SHELL"
+"Спосаб &доступу"
+"Налады спосабу доступу"
