--- a/NetRocks/configs/plug/eng.lng
+++ b/NetRocks/configs/plug/eng.lng
@@ -284,3 +284,7 @@
 "En&sure data connection peer matches server"
 "Enable &TCP_NODELAY option"
 "Enable TCP_&QUICKACK option"
+
+"SHELL Protocol Options"
+"&Way to access shell"
+"Shell access way settings"
