--- a/NetRocks/configs/plug/rus.lng
+++ b/NetRocks/configs/plug/rus.lng
@@ -284,3 +284,7 @@
 "Разрешить &данные только с того же сервера"
 "Включить опцию &TCP_NODELAY"
 "Включить опцию TCP_&QUICKACK"
+
+"Настройки протокола SHELL"
+"Способ &доступа:"
+"Настройки способа доступа"
