Update 2 plugins from far2l

--- a/NetRocks/configs/plug/bel.lng
+++ b/NetRocks/configs/plug/bel.lng
@@ -230,7 +230,7 @@
 "(Уведзеныя файлы)"
 "Уключыць абарону (калі вы не давяраеце серверу)"
 
-"Налады пратаколу FILE"
+"Дадатковыя наладкі злучэння"
 "Каманда, якая выконваецца пры падлучэнні:"
 "Каманда, якая выконваецца пры адключэнні:"
 "Дадатковы радок, які перадаецца камандзе:"
