--- a/NetRocks/configs/plug/rus.lng
+++ b/NetRocks/configs/plug/rus.lng
@@ -230,7 +230,7 @@
 "(Указать пути к конфигам)"
 "Включить защиту (если вы не доверяете серверу)"
 
-"Настройки протокола FILE"
+"Дополнительные настройки соединения"
 "Команда, исполняемая при подключении:"
 "Команда, исполняемая при отключении:"
 "Дополнительная строка, передаваемая команде:"
