Misc changes from far2l

--- a/NetRocks/configs/plug/bel.lng
+++ b/NetRocks/configs/plug/bel.lng
@@ -177,8 +177,8 @@
 "Памылка стварэння спасылкі"
 
 "Памылка:"
-"Праблемны аб'ект:"
-"Праблемны сайт:"
+"Няўдалы аб'ект:"
+"Збоі на сайце:"
 
 "Лакальная ФС"
 "СПРОБ: %llu ПРОПУСКАЎ: %llu"
