--- a/NetRocks/configs/plug/rus.lng
+++ b/NetRocks/configs/plug/rus.lng
@@ -177,8 +177,8 @@
 "Ошибка создания ссылки"
 
 "Ошибка:"
-"Проблемный объект:"
-"Проблемный сайт:"
+"Сбойный объект:"
+"Сбой на сайте:"
 
 "Локальная ФС"
 "ПОПЫТОК: %llu ПРОПУСКОВ: %llu"
