Update utils and TmpPanel from far2l

--- a/tmppanel/configs/plug/TmpBel.lng
+++ b/tmppanel/configs/plug/TmpBel.lng
@@ -22,7 +22,7 @@
 "Даступныя часовыя панэлі"
 
 "Часовая панэль"
-"Дадаць да меню &дыскаў"
+"Дадаць да меню Перайсці"
 "&Клавіша доступу ('1'-'9'). Калі не ўведзена, прызначаецца самастойна"
 "Дадаць да меню дада&ткаў"
 
