--- a/tmppanel/configs/plug/TmpEng.lng
+++ b/tmppanel/configs/plug/TmpEng.lng
@@ -22,8 +22,8 @@
 "Available temporary panels"
 
 "Temporary panel"
-"Add to &Disks menu"
-"Disks menu &hotkey ('1'-'9'). Leave empty to autoassign"
+"Add to Location menu"
+"Location menu &hotkey ('1'-'9'). Leave empty to autoassign"
 "Add to &Plugins menu"
 
 "Use &common panel"
