--- a/tmppanel/configs/plug/TmpRus.lng
+++ b/tmppanel/configs/plug/TmpRus.lng
@@ -22,7 +22,7 @@
 "Доступные временные панели"
 
 "Временная панель"
-"Добавить к меню &дисков"
+"Добавить к меню перехода"
 "&Клавиша доступа ('1'-'9'). Если не введена, назначается сама"
 "Добавить к меню &плагинов"
 
