Update plugin NetRocks from far2l

--- a/NetRocks/configs/plug/bel.lng
+++ b/NetRocks/configs/plug/bel.lng
@@ -230,6 +230,7 @@
 "Дазволеныя KE&X:"
 "Дазволеныя HMAC к&ліента:"
 "Дазволеныя HMAC с&ервера:"
+"Каманда проксі:"
 "Наладкi OpenSS&H:"
 "(Звычайныя файлы наладак)"
 "(Не выкарыстоўваць)"
