--- a/NetRocks/configs/plug/rus.lng
+++ b/NetRocks/configs/plug/rus.lng
@@ -230,6 +230,7 @@
 "Разрешенные KE&X:"
 "Разрешенные HMAC к&лиента:"
 "Разрешенные HMAC с&ервера:"
+"Команда прокси:"
 "OpenSS&H конфиги:"
 "(Обычные файлы конфигурации)"
 "(Не использовать конфиги)"
