Update plugin Colorer from far2l

--- a/colorer/configs/plug/colorerb.lng
+++ b/colorer/configs/plug/colorerb.lng
@@ -50,8 +50,9 @@
 "&Змяняць колер фону змены"
 "Налады TrueColor"
 "Отключен, Нет TrueMod Far"
-"&Файл каляровых стыляў карыстальніка"
-"Фай&л спіса схемаў карыстальніка"
+"&Тэчка карыстацкіх каляровых стыляў (hrd)"
+"Тэчка ка&рыстацкіх схем (hrc)"
+"Файл &карыстацкіх налад схем (hrcsettings)"
 "&Налады схемаў"
 "Наладка наладаў схемаў"
 "Схема"
