--- a/colorer/configs/plug/colorere.lng
+++ b/colorer/configs/plug/colorere.lng
@@ -50,8 +50,9 @@
 "Change Editor &background"
 "TrueColor settings"
 "Disabled, No TrueMod Far"
-"&Users file of color styles"
-"Users &file of schemes"
+"Custo&m color styles folder (hrd)"
+"Custom schemas &folder (hrc)"
+"Custom schemas settin&gs file (hrcsettings)"
 "Sc&heme settings"
 "Setting schemes"
 "Scheme"
