--- a/colorer/configs/plug/colorerr.lng
+++ b/colorer/configs/plug/colorerr.lng
@@ -50,8 +50,9 @@
 "И&зменять цвет фона редактора"
 "Настройки TrueColor"
 "Отключен, Нет TrueMod Far"
-"&Файл цветовых стилей пользователя"
-"Фай&л списка схем пользователя"
+"Папка пользовательских &цветовых стилей (hrd)"
+"Папка пользо&вательских схем (hrc)"
+"Файл &пользовательских настроек схем (hrcsettings)"
 "&Настройки схем"
 "Настройка параметров схем"
 "Схема"
