Update OpenWith plugin from far2l

--- a/OpenWith/configs/OpenWithRus.lng
+++ b/OpenWith/configs/OpenWithRus.lng
@@ -1,24 +1,25 @@
 .Language=Russian,Russian (Русский)
 "OpenWith"
 "Настройки OpenWith"
-"Выберите приложение"
+"OpenWith: Выберите приложение"
 "Ошибка"
-"ОК"
+"OK"
 "Отмена"
-"Использовать внешний терминал для консольных приложений"
+"Использовать &внешний терминал для консольных приложений"
 "Ошибка записи конфигурации."
 "Приложения не найдены."
 "Невозможно выполнить приложение."
-"Не ждать завершения команды"
+"Не ждать &завершения команды"
 "OpenWith: Подробности"
-"Команда запуска:"
-"Адрес файла:"
-"Desktop файл:"
-"MIME-тип:"
-"Фильтровать по OnlyShowIn/NotShowIn"
-"Проверять TryExec"
-"Использовать mimeinfo.cache"
-"Использовать фолбэк по расширению"
-"Использовать утилиту `xdg-mime`"
-"Использовать утилиту `file`"
-"Закрыть"
+"&Команда запуска:"
+"Адрес &файла:"
+"&MIME-тип:"
+"&Desktop файл:"
+"Фильтровать по Only&ShowIn/NotShowIn"
+"Проверять &TryExec"
+"Использовать &mimeinfo.cache"
+"Использовать фолбэк по &расширению"
+"Использовать утилиту `&xdg-mime`"
+"Использовать утилиту `&file`"
+"&Закрыть"
+"З&апустить"
