--- a/OpenWith/configs/OpenWithEng.lng
+++ b/OpenWith/configs/OpenWithEng.lng
@@ -1,24 +1,25 @@
 .Language=English,English
 "OpenWith"
 "OpenWith Settings"
-"Choose application"
+"OpenWith: Choose application"
 "Error"
 "OK"
 "Cancel"
-"Use external terminal for console apps"
+"&Use external terminal for console apps"
 "Failed to save configuration."
 "No applications found."
 "The application cannot be executed."
-"Don't wait for command completion"
+"Don't &wait for command completion"
 "OpenWith: Details"
-"Launch command:"
-"Filepath:"
-"Desktop file:"
-"MIME type:"
-"Filter by OnlyShowIn/NotShowIn"
-"Validate TryExec"
-"Use mimeinfo.cache"
-"Use extension-based fallback"
-"Use `xdg-mime` tool"
-"Use `file` tool"
-"Close"
+"L&aunch command:"
+"&Filepath:"
+"&MIME type:"
+"&Desktop file:"
+"Filter by Only&ShowIn/NotShowIn"
+"Validate &TryExec"
+"Use &mimeinfo.cache"
+"Use &extension-based fallback"
+"Use `&xdg-mime` tool"
+"Use `&file` tool"
+"&Close"
+"&Launch"
