Update OpenWith plugin from far2l

--- a/OpenWith/configs/OpenWithEng.lng
+++ b/OpenWith/configs/OpenWithEng.lng
@@ -2,12 +2,12 @@
 "OpenWith"
 "OpenWith Settings"
 "OpenWith: Choose application"
-"Error"
+"OpenWith Error"
 "OK"
 "Cancel"
 "&Use external terminal for console apps"
 "Failed to save configuration."
-"No applications found."
+"No applications found. Detected MIME type:"
 "The application cannot be executed."
 "Don't &wait for command completion"
 "OpenWith: Details"
