--- a/OpenWith/configs/OpenWithRus.lng
+++ b/OpenWith/configs/OpenWithRus.lng
@@ -2,12 +2,12 @@
 "OpenWith"
 "Настройки OpenWith"
 "OpenWith: Выберите приложение"
-"Ошибка"
+"Ошибка OpenWith"
 "OK"
 "Отмена"
 "Использовать &внешний терминал для консольных приложений"
 "Ошибка записи конфигурации."
-"Приложения не найдены."
+"Приложения не найдены. Распознанный MIME-тип:"
 "Невозможно выполнить приложение."
 "Не ждать &завершения команды"
 "OpenWith: Подробности"
