Update OpenWith plugin from far2l

--- a/OpenWith/configs/OpenWithRus.lng
+++ b/OpenWith/configs/OpenWithRus.lng
@@ -3,8 +3,8 @@
 "Настройки OpenWith"
 "OpenWith: Выберите приложение"
 "Ошибка OpenWith"
-"OK"
-"Отмена"
+"&ОК"
+"О&тмена"
 "Использовать &внешний терминал для консольных приложений"
 "Ошибка записи конфигурации."
 "Приложения не найдены. Распознанный MIME-тип:"
@@ -21,5 +21,10 @@
 "Использовать фолбэк по &расширению"
 "Использовать утилиту `&xdg-mime`"
 "Использовать утилиту `&file`"
+"Загружать &псевдонимы MIME-типов"
 "&Закрыть"
 "З&апустить"
+"&Источник:"
+"полное сканирование для "
+" для "
+" в "
