--- a/OpenWith/configs/OpenWithEng.lng
+++ b/OpenWith/configs/OpenWithEng.lng
@@ -3,8 +3,8 @@
 "OpenWith Settings"
 "OpenWith: Choose application"
 "OpenWith Error"
-"OK"
-"Cancel"
+"&OK"
+"&Cancel"
 "&Use external terminal for console apps"
 "Failed to save configuration."
 "No applications found. Detected MIME type:"
@@ -21,5 +21,10 @@
 "Use &extension-based fallback"
 "Use `&xdg-mime` tool"
 "Use `&file` tool"
+"Load MIME type &aliases"
 "&Close"
 "&Launch"
+"&Source:"
+"full scan for "
+" for "
+" in "
