Update OpenWith plugin from far2l

--- a/OpenWith/configs/OpenWithEng.lng
+++ b/OpenWith/configs/OpenWithEng.lng
@@ -28,3 +28,11 @@
 "full scan for "
 " for "
 " in "
+"files selected: "
+" and more "
+"Name: "
+"Location: "
+"Executable: "
+"Version: "
+"Build Version: "
+"C&lear selection if command executed"
