--- a/OpenWith/configs/OpenWithRus.lng
+++ b/OpenWith/configs/OpenWithRus.lng
@@ -28,3 +28,11 @@
 "полное сканирование для "
 " для "
 " в "
+"выбрано файлов: "
+" и ещё "
+"Имя: "
+"Расположение: "
+"Исполняемый файл: "
+"Версия: "
+"Версия сборки: "
+"&Снимать выделение, если выбрана команда"
