--- a/OpenWith/configs/OpenWithRus.lng
+++ b/OpenWith/configs/OpenWithRus.lng
@@ -36,3 +36,6 @@
 "Версия: "
 "Версия сборки: "
 "&Снимать выделение, если выбрана команда"
+"Загружать под&классы MIME‑типов"
+"Распознавать структурные с&уффиксы MIME"
+"Искать приложения для обоб&щённых MIME-типов"
