Misc updates from far2l

--- a/OpenWith/configs/OpenWithEng.lng
+++ b/OpenWith/configs/OpenWithEng.lng
@@ -1,41 +1,56 @@
 .Language=English,English
+
 "OpenWith"
-"OpenWith Settings"
 "OpenWith: Choose application"
-"OpenWith Error"
+
 "&OK"
 "&Cancel"
-"&Use external terminal for console apps"
+"OpenWith Error"
 "Failed to save configuration."
 "No applications found. Detected MIME type:"
+" and more "
 "The application cannot be executed."
+
+"OpenWith Settings"
+
+"&Use external terminal for console apps"
 "Don't &wait for command completion"
-"OpenWith: Details"
-"L&aunch command:"
-"&Filepath:"
-"&MIME type:"
-"&Desktop file:"
-"Filter by Only&ShowIn/NotShowIn"
-"Validate &TryExec"
-"Use &mimeinfo.cache"
-"Use &extension-based fallback"
+"C&lear selection if command executed"
+"Co&nfirm opening if file count exceeds:"
+
 "Use `&xdg-mime` tool"
 "Use `&file` tool"
+"Use &extension-based fallback"
 "Load MIME type &aliases"
+"Load MIME type su&bclasses"
+"&Resolve structured MIME suffixes"
+"Search for apps for &generic MIME types"
+"Show universal &handlers for all files"
+"Use &mimeinfo.cache"
+"Filter by Only&ShowIn/NotShowIn"
+"Validate &TryExec"
+"Disable ranking (sort al&phabetically)"
+
+"OpenWith: Details"
+
+"&Filepath:"
+"files selected: "
+"&MIME type:"
+"L&aunch command:"
 "&Close"
 "&Launch"
+
+"&Desktop file:"
 "&Source:"
 "full scan for "
 " for "
 " in "
-"files selected: "
-" and more "
+
 "Name: "
 "Location: "
 "Executable: "
 "Version: "
 "Build Version: "
-"C&lear selection if command executed"
-"Load MIME type su&bclasses"
-"&Resolve structured MIME suffixes"
-"Search for apps for &generic MIME types"
+
+"OpenWith: confirm launch"
+"Are you sure you want to open %zu files with application '%ls'?"
