--- a/OpenWith/configs/OpenWithRus.lng
+++ b/OpenWith/configs/OpenWithRus.lng
@@ -1,41 +1,56 @@
 .Language=Russian,Russian (Русский)
+
 "OpenWith"
-"Настройки OpenWith"
 "OpenWith: Выберите приложение"
-"Ошибка OpenWith"
+
 "&ОК"
 "О&тмена"
-"Использовать &внешний терминал для консольных приложений"
+"Ошибка OpenWith"
 "Ошибка записи конфигурации."
 "Приложения не найдены. Распознанный MIME-тип:"
+" и ещё "
 "Невозможно выполнить приложение."
+
+"Настройки OpenWith"
+
+"Использовать &внешний терминал для консольных приложений"
 "Не ждать &завершения команды"
-"OpenWith: Подробности"
-"&Команда запуска:"
-"Адрес &файла:"
-"&MIME-тип:"
-"&Desktop файл:"
-"Фильтровать по Only&ShowIn/NotShowIn"
-"Проверять &TryExec"
-"Использовать &mimeinfo.cache"
-"Использовать фолбэк по &расширению"
+"&Снимать выделение, если выбрана команда"
+"По&дтверждать открытие, если файлов больше чем:"
+
 "Использовать утилиту `&xdg-mime`"
 "Использовать утилиту `&file`"
+"Использовать фолбэк по &расширению"
 "Загружать &псевдонимы MIME-типов"
+"Загружать под&классы MIME‑типов"
+"Распознавать структурные с&уффиксы MIME"
+"Искать приложения для обоб&щённых MIME-типов"
+"Показывать у&ниверсальные обработчики для всех файлов"
+"Использовать &mimeinfo.cache"
+"Фильтровать по Only&ShowIn/NotShowIn"
+"Проверять &TryExec"
+"Отключить ранжирование (сортировка по &имени)"
+
+"OpenWith: Подробности"
+
+"Адрес &файла:"
+"выбрано файлов: "
+"&MIME-тип:"
+"&Команда запуска:"
 "&Закрыть"
 "З&апустить"
+
+"&Desktop файл:"
 "&Источник:"
 "полное сканирование для "
 " для "
 " в "
-"выбрано файлов: "
-" и ещё "
+
 "Имя: "
 "Расположение: "
 "Исполняемый файл: "
 "Версия: "
 "Версия сборки: "
-"&Снимать выделение, если выбрана команда"
-"Загружать под&классы MIME‑типов"
-"Распознавать структурные с&уффиксы MIME"
-"Искать приложения для обоб&щённых MIME-типов"
+
+"OpenWith: подтвердите запуск"
+"Вы действительно хотите открыть %zu файлов в приложении '%ls'?"
