Update OpenWith plugin from far2l

--- a/OpenWith/configs/OpenWithRus.lng
+++ b/OpenWith/configs/OpenWithRus.lng
@@ -6,6 +6,7 @@
 "&ОК"
 "О&тмена"
 "Ошибка OpenWith"
+"Выбранный объект должен быть файлом, доступным локально по реальному пути."
 "Ошибка записи конфигурации."
 "Приложения не найдены. Распознанный MIME-тип:"
 " и ещё "
@@ -30,6 +31,7 @@
 "Фильтровать по Only&ShowIn/NotShowIn"
 "Проверять &TryExec"
 "Отключить ранжирование (сортировка по &имени)"
+"Передавать простые пути в&место file:// URI"
 
 "OpenWith: Подробности"
 
