--- a/OpenWith/configs/OpenWithEng.lng
+++ b/OpenWith/configs/OpenWithEng.lng
@@ -6,6 +6,7 @@
 "&OK"
 "&Cancel"
 "OpenWith Error"
+"Selected item must be a file accessible locally via real path."
 "Failed to save configuration."
 "No applications found. Detected MIME type:"
 " and more "
@@ -30,6 +31,7 @@
 "Filter by Only&ShowIn/NotShowIn"
 "Validate &TryExec"
 "Disable ranking (sort al&phabetically)"
+"Pass pla&in paths instead of file:// URIs"
 
 "OpenWith: Details"
 
