--- a/OpenWith/configs/OpenWithRus.lng
+++ b/OpenWith/configs/OpenWithRus.lng
@@ -20,6 +20,7 @@
 
 "Использовать утилиту `&xdg-mime`"
 "Использовать утилиту `&file`"
+"Использовать утилиту `magi&ka`"
 "Использовать фолбэк по &расширению"
 "Загружать &псевдонимы MIME-типов"
 "Загружать под&классы MIME‑типов"
