--- a/OpenWith/configs/OpenWithRus.lng
+++ b/OpenWith/configs/OpenWithRus.lng
@@ -21,6 +21,7 @@
 "Использовать утилиту `&xdg-mime`"
 "Использовать утилиту `&file`"
 "Использовать утилиту `magi&ka`"
+"Использовать правила glob-&шаблонов"
 "Использовать фолбэк по &расширению"
 "Загружать &псевдонимы MIME-типов"
 "Загружать под&классы MIME‑типов"
@@ -37,7 +38,7 @@
 
 "Адрес &файла:"
 "выбрано файлов: "
-"&MIME-тип:"
+"&MIME-профиль:"
 "&Команда запуска:"
 "&Закрыть"
 "З&апустить"
